# maxpluslib

./: .gitignore  .gitlab-ci.yml  README.md
include/maxplus/algebra/: maxplus.h  mpmatrix.h  mpsparsematrix.h  mptype.h
include/maxplus/base/: base.h  basic_types.h
include/maxplus/base/analysis/mcm/: mcm.h  mcmdg.h  mcmgraph.h  mcmhoward.h  mcmkarp.h  mcmyto.h
include/maxplus/base/exception/: exception.h
include/maxplus/base/fraction/: fraction.h
include/maxplus/base/fsm/: fsm.h  iofsm.h
include/maxplus/base/math/: cmath.h
include/maxplus/base/string/: cstring.h
include/maxplus/game/: mpgameautomaton.h  policyiteration.h  ratiogame.h  strategyvector.h
include/maxplus/graph/: doubleweightedgraph.h  mpautomaton.h  mpstatespace.h  smpls.h
src/: CMakeLists.txt
src/algebra/: mpmatrix.cc  mpsparsematrix.cc
src/base/analysis/mcm/: mcm.cc  mcmdg.cc  mcmgraph.cc  mcmhoward.cc  mcmkarp.cc  mcmyto.cc
src/base/exception/: exception.cc
src/base/fsm/: fsm.cc
src/base/string/: cstring.cc
src/graph/: CMakeLists.txt  mpautomaton.cc  smpls.cc
src/testbench/algebra/: matrixtest.cc  matrixtest.h  sparsematrixtest.cc  sparsematrixtest.h  testing.h  valuetest.cc  valuetest.h  vectortest.h
src/testbench/base/: mcmtest.cc  mcmtest.h  testing.h
src/testbench/game/: policyiterationtest.cc  policyiterationtest.h  strategyvectortest.cc  strategyvectortest.h  testing.h
src/testbench/graph/: mpautomatontest.cc  mpautomatontest.h  testing.h
utils/: format.ps1  test-formatting.ps1
